syntax = "proto3";

package com.example.smallgrpcapi;

option java_multiple_files = true;

service PersonService {
  rpc findPerson (FindPersonRequest) returns (PersonReply) {}
}

message FindPersonRequest {
  int32 id = 1;
}

message PersonReply {
  Person person = 1;
}

message Person {
  string first_name = 1;
  string last_name = 2;
}